@@ -1,4 +1,5 @@
-2264 [Worker] fixed temporary worker only processing one job
+2276 [QAAC] if CoreAudioToolbox.dll is missing an information will be displayed
+2275 [Worker] fixed temporary worker only processing one job
 2274 [Adaptive Muxer] fixed handling of the "and close" button
 2273 [Audio Encoding Window] cosmetics
 2272 [AVS Script Creator] moved "acceptable aspect error" setting into the AviSynth profile (1% by default)
